# tesseract-rs

./: Cargo.toml  LICENSE  Makefile  README.md  build_page_seg_modes.py  img.html  img.tiff  img.txt  page-seg-modes.txt
.github/workflows/: rust.yml
src/: iterator.rs  lib.rs  page_seg_mode.rs
src/plumbing/: mod.rs  pix.rs  tess_base_api.rs  tesseract_text.rs
tesseract-sys/: Cargo.toml  README.md  build.rs  generate.py  wrapper.h  wrapper_capi.h  wrapper_public_types.hpp
tesseract-sys/src/: lib.rs
tests/: iterations.rs  tesseract_initialization.rs
wrinkle/: Cargo.toml
wrinkle/src/: main.rs
