[package]
name          = "tesseract"
version       = "0.15.0"
authors       = ["Kevin Kwok <antimatter15@gmail.com>", "Chris Couzens <ccouzens@gmail.com>"]
documentation = "https://docs.rs/tesseract"
repository    = "https://github.com/antimatter15/tesseract-rs"
description   = "Higher-level bindings for Tesseract OCR"
license       = "MIT"
keywords      = ["tesseract", "OCR", "bindings"]
categories    = ["api-bindings", "multimedia::images"]

[dependencies]
tesseract-sys = "~0.5"
tesseract-plumbing = { version="~0.11", default-features = false }
thiserror = "1.0"

[features]
default = ["tesseract_5_2"]
tesseract_5_2 = ["tesseract-plumbing/tesseract_5_2"]
